--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
 
 
 .footer {
-  padding: 55px;
+  
   display: block;
   color: white;
   background-color: #176585;
@@ -140,7 +140,8 @@ parrafo2 {
 }
 
 .img-2 {
-  width: 20%;
+  width: 16%;
+  margin-left: 75px;
 
 }
 
@@ -159,20 +160,12 @@ parrafo2 {
   font-size: x-large;
 }
 
-.in-flex1 {
-  background-color: #a0d2eb;
-  text-align: end;
-  height: 95px;
-  padding: 30px 10%;
-  background-image: linear-gradient(#24252A, black);
-  opacity: 86%;
-  flex-direction: column;
-}
+
 
 .box {
   width: 100px;
-  color: pink;
-  font-family: "Montserrat-Black.otf", sans-serif;
+  
+  font-family: Arial, Helvetica, sans-serif;
   font-size: small;
   transition-property: width;
   transition-duration: 2s;
@@ -184,8 +177,11 @@ parrafo2 {
 
 .img-3 {
   width: 20%;
-  margin-left: 190px;
+ margin-left: 55px;
+ 
 }
+
+
 
 .box:hover {
   width: 1518px;
@@ -197,9 +193,7 @@ parrafo2 {
   margin: 0px;
 }
 
-img-5 {
-  width: 100px;
-}
+
 .hijo {
   
   font-family: Arial, Helvetica, sans-serif;
@@ -308,22 +302,25 @@ input[type="file"] {
   margin: 20px;
   margin-bottom: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: #176585;
+  
 }
 
 .in-flex div {
   flex: 1;
   padding: 25;
-  color: white;
+  
   margin: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  
+ 
 }
 /* RESPONSIVE */
 .pb {
+  background-color: #36cecc;
   margin: 0;
-  display: block;
-  font-family: "Montserrat-Black.otf", sans-serif;
-  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #176585;
 }
 
 /* UTILIZANDO GRID */
@@ -365,8 +362,9 @@ body {
 
 .main {
   grid-area: main;
-  background-image: linear-gradient(#24252A, black);
+  
   color: #15658f;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer {
